objects/Integration_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Binding_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Binding Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;), (LastModifiedDate - DATETIMEVALUE(CreatedDate ))*24, Total_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Name_c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_indicator__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Open&quot;),
IMAGE(&quot;/resource/1571911804000/GraphicsPackNew/fatcow/farmfresh/16/delete.png&quot;, &quot;Minus symbol&quot;),IF(ISPICKVAL(Status__c,&quot;Closed&quot;),IMAGE(&quot;/resource/1571911804000/GraphicsPackNew/silk/16/silk/tick.png&quot;, &quot;right symbol&quot;),NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Integration Error Log</relationshipLabel>
        <relationshipName>Integration_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration_Event_Log__c</fullName>
        <label>Integration Event Log</label>
        <referenceTo>Integration_Event_Log__c</referenceTo>
        <relationshipLabel>Integration Error Log</relationshipLabel>
        <relationshipName>Integration_Error_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;), NOW()  -  DATETIMEVALUE(CreatedDate), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>(NOW() - DATETIMEVALUE(CreatedDate ))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Integration Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Lights_On_IT_Errors</fullName>
        <columns>Error_indicator__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>System_Name__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>contains</operation>
            <value>Technical</value>
        </filters>
        <label>My Assigned Lights On IT Errors</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Lights_On_IT_Errors</fullName>
        <columns>Error_indicator__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>System_Name__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>contains</operation>
            <value>Technical</value>
        </filters>
        <label>Unassigned Lights On IT Errors</label>
    </listViews>
    <nameField>
        <displayFormat>Error-{0000000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Error Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>